// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Sidebar About 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Weitere Infos
    </h2>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Über das Projekt
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <p
          className="sc-gsTCUz iiIrBj"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Die Folgen des Klimawandels, insbesondere die trockenen und heißen Sommer, belasten das Berliner Ökosystem. Unsere Stadtbäume vertrocknen und tragen langfristige Schäden davon: In den letzten Jahren mussten immer mehr Bäume gefällt werden und ihre Lebensdauer sinkt. Inzwischen wird die Bevölkerung regelmäßig zur Unterstützung aufgerufen, allerdings weitgehend unkoordiniert. Dies möchten wir ändern und mit diesem Projekt eine koordinierte Bürger*innenbeteiligung bei der Bewässerung städtischen Grüns ermöglichen.",
            }
          }
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Nützliche Links
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <p
          className="sc-gsTCUz iiIrBj"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ul><li><a target=\\"blank\\" href=\\"https://www.lieblingsbaum-initiative.de/\\">Initiative Lieblingsbaum</a></li><li><a target=\\"blank\\" href=\\"https://www.bund-berlin.de/mitmachen/aktion-baeume-giessen/\\">BUND - Aktion Bäume gießen</a></li><li><a target=\\"blank\\" href=\\"https://www.baumpflegeportal.de/baumpflege/trockenheit-duerre-wann-baeume-giessen/\\">Baumpflegeportal - Gießen bei Trockenheit</a></li><li><a target=\\"blank\\" href=\\"https://www.berlin.de/senuvk/umwelt/stadtgruen/stadtbaeume/kampagne/start.shtml\\">Stadtbaumkampagne Berlin</a></li><li><a target=\\"blank\\" href=\\"https://www.berlin.de/pflanzenschutzamt/stadtgruen/beratung/bewaesserungsempfehlung-fuer-stadtbaeume/\\">Projekt Bodenfeuchte Berlin</a></li><li><a target=\\"blank\\" href=\\"https://www.bmi.bund.de/SharedDocs/downloads/DE/publikationen/themen/bauen/wohnen/weissbuch-stadtgruen.html\\">Grünbuch Stadtgrün</a></li><li><a target=\\"blank\\" href=\\"https://www.hcu-hamburg.de/fileadmin/documents/REAP/files/Bildungsmaterial_Stadtbaeume_im_Klimawandel_2017.pdf\\">Stadtbäume - Bedeutung und Herausforderungen in Zeiten des Klimawandels</a></li><li><a target=\\"blank\\" href=\\"https://www.bund-naturschutz.de/natur-und-landschaft/stadt-als-lebensraum/stadtbaeume/funktionen-von-stadtbaeumen.html\\">BUND - Funktionen von Stadtbäumen</a></li></ul>",
            }
          }
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Über uns
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <p
          className="sc-gsTCUz iiIrBj"
          dangerouslySetInnerHTML={
            Object {
              "__html": "“Gieß den Kiez” ist ein Projekt des <a target=\\"blank\\" href=\\"https://www.citylab-berlin.org/\\">CityLAB Berlin</a>. Das CityLAB ist ein öffentliches Innovationslabor für die Stadt der Zukunft im ehemaligen Flughafen Berlin-Tempelhof. Gemeinsam mit einem großen Netzwerk aus Verwaltung, Zivilgesellschaft, Wissenschaft und Start-ups arbeiten wir an neuen Ideen für ein lebenswertes Berlin. Das CityLAB ist ein offener Ort zum Mitmachen! Wenn ihr mehr wissen wollt, schaut euch auf unserer Webseite um oder kommt einfach mal vorbei! <br /> <br /> Das CityLAB ist ein Projekt der Technologiestiftung Berlin und wird gefördert durch die Berliner Senatskanzlei. <br /> <br /> Du hast Feedback? Wir würden uns sehr darüber freuen, in unserem dafür eingerichteten <a target=\\"blank\\" href=\\"https://join.slack.com/t/giessdenkiez/shared_invite/zt-e3et281u-xON4UmBZpKavzDRkw5HmCQ\\">Slack-Kanal</a> von Dir zu hören.<br /> <br />Presseanfragen gehen am besten an:<br /> Frauke Nippel<br /><a href=\\"mailto:nippel@technologiestiftung-berlin.de?subject=giessdenkiez.de%20Presseanfrage\\">nippel@technologiestiftung-berlin.de</a><br />
          <a href=\\"tel:01757236451\\">0175 72 36 451</a>",
            }
          }
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Datenquellen
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <p
          className="sc-gsTCUz iiIrBj"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Die Karte zeigt einen Großteil der Berliner Straßen- und Anlagenbäume (750.000; Stand: Juli 2021). Zusätzlich wird abgebildet, wie viel Niederschlag in den letzten 30 Tagen bei jedem Baum gefallen ist und ob diese in der Zeit bereits gegossen wurden. Aus verschiedenen Gründen sind leider noch nicht alle Berliner Stadtbäume aufgeführt. Wir arbeiten aber daran, die Datenlage zu verbessern und eine möglichst vollständige Darstellung des Berliner Baumbestandes zu erreichen. Die aktuellen Datenquellen sind:
          <ul>
            <li>
              <a target=\\"blank\\" href=\\"https://fbinter.stadt-berlin.de/fb/berlin/service_intern.jsp?id=s_wfs_baumbestand@senstadt&type=WFS\\">Geoportal Berlin / Straßenbäume</a>
            </li>
            <li>
              <a target=\\"blank\\" href=\\"https://fbinter.stadt-berlin.de/fb/berlin/service_intern.jsp?id=s_wfs_baumbestand_an@senstadt&type=WFS\\">Geoportal Berlin / Anlagenbäume</a>
            </li>
            <li>
              <a target=\\"blank\\" href=\\"https://www.dwd.de/\\">Deutscher Wetterdienst</a>
            </li>
            <li>Pumpen aus <a target=\\"blank\\" href=\\" https://www.openstreetmap.de\\"> Open Street Map</a>
            </li>
          </ul>",
            }
          }
          onClick={[Function]}
        />
      </div>
    </div>
    <h2
      className="sc-dOSReg LQxMu"
    >
      F.A.Q.
    </h2>
    <p
      className="sc-gsTCUz iiIrBj"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Basierend auf dem regen Austausch unserer Community auf Slack & euren Rückmeldungen per Email und Telefon, haben wir ein kleines FAQ angelegt. Hier werden die am häuftigsten gestellten Fragen beantwortet.",
        }
      }
      onClick={[Function]}
    />
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Wie kann ich mitmachen?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Was kann ich tun, wenn Bäume nicht richtig eingetragen sind?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Warum sollte ich aktiv werden und Bäume gießen?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Wie gieße ich richtig?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          An wen kann ich mich wenden, wenn Pumpen kaputt oder beschädigt sind?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Wie wird mit technischen Problemen umgegangen?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Warum lädt die Website nicht oder nur sehr langsam?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Was tun, wenn ich einen Baum fälschlicherweise gegossen habe?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Ist das Prinzip auf andere Städte übertragbar?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Ich habe immer noch eine Frage!
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          I don’t speak any German: What’s going on here?
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          +
        </span>
      </div>
    </div>
    <div
      className="sc-bBrOnJ ghZEuN"
    >
      <span>
        Teilen:
      </span>
      <div
        className="sc-cOajty iOcAbN"
      >
        <button
          aria-label="facebook"
          className="react-share__ShareButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "inherit",
              "cursor": "pointer",
              "font": "inherit",
              "padding": 0,
            }
          }
        >
          <svg
            height={36}
            viewBox="0 0 64 64"
            width={36}
          >
            <circle
              cx="32"
              cy="32"
              fill="#3b5998"
              r="31"
              style={Object {}}
            />
            <path
              d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
              fill="white"
            />
          </svg>
        </button>
        <button
          aria-label="twitter"
          className="react-share__ShareButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "inherit",
              "cursor": "pointer",
              "font": "inherit",
              "padding": 0,
            }
          }
        >
          <svg
            height={36}
            viewBox="0 0 64 64"
            width={36}
          >
            <circle
              cx="32"
              cy="32"
              fill="#00aced"
              r="31"
              style={Object {}}
            />
            <path
              d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
              fill="white"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-AzgDb hgQeNQ"
    >
      <img
        alt="GitHub Mark"
        className="sc-khAkjo iJLIPT"
        src="/images/icon-github.svg"
      />
      <p
        className="sc-gsTCUz iiIrBj"
        onClick={[Function]}
      >
        Giess den Kiez ist ein 
        <a
          href="https://github.com/technologiestiftung/giessdenkiez-de"
          target="blank"
        >
          Open Source Projekt!
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar Profile Loading 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Profil
    </h2>
    <div
      className="sc-dacFzL eWgBi"
    >
      <div
        className="sc-kIeTtH beHmkX"
      >
        <img
          className="sc-hOqqkJ kvOCrw"
          src="/images/icon-trees.svg"
        />
        <div
          className="sc-dtwoBo fyICIg"
        >
          Lade Profil...
        </div>
        
      </div>
    </div>
    <p
      className="sc-gsTCUz iiIrBj sc-bTvRPi kYdhOk"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/impressum/\\">Impressum</a> und <a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/datenschutz/\\">Datenschutz</a>",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Sidebar Profile Logged In No Data 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Profil
    </h2>
    <div
      className="sc-dacFzL eWgBi"
    >
      <div
        className="sc-kIeTtH beHmkX"
      >
        <img
          className="sc-hOqqkJ kvOCrw"
          src="/images/icon-trees.svg"
        />
        <div
          className="sc-dtwoBo fyICIg"
        >
          Lade Profil...
        </div>
        
      </div>
    </div>
    <p
      className="sc-gsTCUz iiIrBj sc-bTvRPi kYdhOk"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/impressum/\\">Impressum</a> und <a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/datenschutz/\\">Datenschutz</a>",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Sidebar Profile Logged In With Data 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Profil
    </h2>
    <div
      className="sc-dacFzL eWgBi"
    >
      <div
        className="sc-kIeTtH beHmkX"
      >
        <img
          className="sc-hOqqkJ kvOCrw"
          src="/images/icon-trees.svg"
        />
        <div
          className="sc-dtwoBo fyICIg"
        >
          Lade Profil...
        </div>
        
      </div>
    </div>
    <p
      className="sc-gsTCUz iiIrBj sc-bTvRPi kYdhOk"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/impressum/\\">Impressum</a> und <a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/datenschutz/\\">Datenschutz</a>",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Sidebar Profile Logged Out 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Profil
    </h2>
    <div
      className="sc-dacFzL eWgBi"
    >
      <div
        className="sc-kIeTtH beHmkX"
      >
        <img
          className="sc-hOqqkJ kvOCrw"
          src="/images/icon-trees.svg"
        />
        <div
          className="sc-dtwoBo fyICIg"
        >
          Lade Profil...
        </div>
        
      </div>
    </div>
    <p
      className="sc-gsTCUz iiIrBj sc-bTvRPi kYdhOk"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/impressum/\\">Impressum</a> und <a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/datenschutz/\\">Datenschutz</a>",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Sidebar Search 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Suche & Filter
    </h2>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Datenansicht
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <p
          className="sc-gsTCUz iiIrBj"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Betrachte welche Bäume bereits von anderen Nutzern gegossen wurden. Oder finde heraus, wieviel Niederschlag die Bäume in den letzten 30 Tagen erreicht hat.",
            }
          }
          onClick={[Function]}
        />
        <div
          className="sc-fbkhIv ehvhyo"
        >
          <span
            className="sc-GqfZa gTZxPv"
            onClick={[Function]}
          >
            Niederschläge
          </span>
          <span
            className="sc-GqfZa da-drqv"
            onClick={[Function]}
          >
            Bereits adoptiert
          </span>
          <span
            className="sc-GqfZa da-drqv"
            onClick={[Function]}
          >
            In den letzten 30 Tagen gegossen
          </span>
        </div>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Wasserbedarf
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <p
          className="sc-gsTCUz iiIrBj"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Finde heraus wie sehr Bäume Wasser benötigen.",
            }
          }
          onClick={[Function]}
        />
        <div
          className="sc-fbkhIv ehvhyo"
        >
          <span
            className="sc-GqfZa da-drqv"
            onClick={[Function]}
          >
            Niedrig
            <div
              className="sc-clsHhM dAjopB"
            >
              <svg
                height="14px"
                viewBox="0 0 9 14"
                width="9px"
              >
                <g
                  fill="#75ADE8"
                  id="water-drop"
                >
                  <path
                    d="M4.5,14 C6.98528137,14 9,11.8235471 9,9.13875632 C9,6.45396557 4.5,0 4.5,0 C4.5,0 0,6.45396557 0,9.13875632 C0,11.8235471 2.01471863,14 4.5,14 Z"
                    id="water-drop-path"
                  />
                </g>
              </svg>
            </div>
          </span>
          <span
            className="sc-GqfZa da-drqv"
            onClick={[Function]}
          >
            Mittel
            <div
              className="sc-clsHhM dAjopB"
            >
              <svg
                height="14px"
                viewBox="0 0 9 14"
                width="9px"
              >
                <g
                  fill="#75ADE8"
                  id="water-drop"
                >
                  <path
                    d="M4.5,14 C6.98528137,14 9,11.8235471 9,9.13875632 C9,6.45396557 4.5,0 4.5,0 C4.5,0 0,6.45396557 0,9.13875632 C0,11.8235471 2.01471863,14 4.5,14 Z"
                    id="water-drop-path"
                  />
                </g>
              </svg>
              <svg
                height="14px"
                viewBox="0 0 9 14"
                width="9px"
              >
                <g
                  fill="#75ADE8"
                  id="water-drop"
                >
                  <path
                    d="M4.5,14 C6.98528137,14 9,11.8235471 9,9.13875632 C9,6.45396557 4.5,0 4.5,0 C4.5,0 0,6.45396557 0,9.13875632 C0,11.8235471 2.01471863,14 4.5,14 Z"
                    id="water-drop-path"
                  />
                </g>
              </svg>
            </div>
          </span>
          <span
            className="sc-GqfZa da-drqv"
            onClick={[Function]}
          >
            Hoch
            <div
              className="sc-clsHhM dAjopB"
            >
              <svg
                height="14px"
                viewBox="0 0 9 14"
                width="9px"
              >
                <g
                  fill="#75ADE8"
                  id="water-drop"
                >
                  <path
                    d="M4.5,14 C6.98528137,14 9,11.8235471 9,9.13875632 C9,6.45396557 4.5,0 4.5,0 C4.5,0 0,6.45396557 0,9.13875632 C0,11.8235471 2.01471863,14 4.5,14 Z"
                    id="water-drop-path"
                  />
                </g>
              </svg>
              <svg
                height="14px"
                viewBox="0 0 9 14"
                width="9px"
              >
                <g
                  fill="#75ADE8"
                  id="water-drop"
                >
                  <path
                    d="M4.5,14 C6.98528137,14 9,11.8235471 9,9.13875632 C9,6.45396557 4.5,0 4.5,0 C4.5,0 0,6.45396557 0,9.13875632 C0,11.8235471 2.01471863,14 4.5,14 Z"
                    id="water-drop-path"
                  />
                </g>
              </svg>
              <svg
                height="14px"
                viewBox="0 0 9 14"
                width="9px"
              >
                <g
                  fill="#75ADE8"
                  id="water-drop"
                >
                  <path
                    d="M4.5,14 C6.98528137,14 9,11.8235471 9,9.13875632 C9,6.45396557 4.5,0 4.5,0 C4.5,0 0,6.45396557 0,9.13875632 C0,11.8235471 2.01471863,14 4.5,14 Z"
                    id="water-drop-path"
                  />
                </g>
              </svg>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Baumalter
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <p
          className="sc-gsTCUz iiIrBj"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Erkunde die Geschichte von Berlins Baumlandschaft",
            }
          }
          onClick={[Function]}
        />
        <br />
        <div
          className="sc-jeGSBP hNjwNG"
        >
          <span
            className="sc-nFpLZ gxzVEb"
          >
            0
             - 
            320
             Jahre
          </span>
          <div
            className="sc-eJMQSu dvFMvb"
          >
            <div
              className="rc-slider rc-slider-with-marks"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="rc-slider-rail"
                style={Object {}}
              />
              <div
                className="rc-slider-track rc-slider-track-1"
                style={
                  Object {
                    "left": "0%",
                    "right": "auto",
                    "width": "100%",
                  }
                }
              />
              <div
                className="rc-slider-step"
              >
                <span
                  className="rc-slider-dot rc-slider-dot-active"
                  style={
                    Object {
                      "left": "0%",
                    }
                  }
                />
                <span
                  className="rc-slider-dot rc-slider-dot-active"
                  style={
                    Object {
                      "left": "25%",
                    }
                  }
                />
                <span
                  className="rc-slider-dot rc-slider-dot-active"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                />
                <span
                  className="rc-slider-dot rc-slider-dot-active"
                  style={
                    Object {
                      "left": "75%",
                    }
                  }
                />
                <span
                  className="rc-slider-dot rc-slider-dot-active"
                  style={
                    Object {
                      "left": "100%",
                    }
                  }
                />
              </div>
              <div
                aria-disabled={false}
                aria-valuemax={320}
                aria-valuemin={0}
                aria-valuenow={0}
                className="rc-slider-handle rc-slider-handle-1"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "0%",
                    "right": "auto",
                    "transform": "translateX(-50%)",
                  }
                }
                tabIndex={0}
              />
              <div
                aria-disabled={false}
                aria-valuemax={320}
                aria-valuemin={0}
                aria-valuenow={320}
                className="rc-slider-handle rc-slider-handle-2"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "100%",
                    "right": "auto",
                    "transform": "translateX(-50%)",
                  }
                }
                tabIndex={0}
              />
              <div
                className="rc-slider-mark"
              >
                <span
                  className="rc-slider-mark-text rc-slider-mark-text-active"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "left": "0%",
                      "msTransform": "translateX(-50%)",
                      "transform": "translateX(-50%)",
                    }
                  }
                >
                  0
                </span>
                <span
                  className="rc-slider-mark-text rc-slider-mark-text-active"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "left": "25%",
                      "msTransform": "translateX(-50%)",
                      "transform": "translateX(-50%)",
                    }
                  }
                >
                  80
                </span>
                <span
                  className="rc-slider-mark-text rc-slider-mark-text-active"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "left": "50%",
                      "msTransform": "translateX(-50%)",
                      "transform": "translateX(-50%)",
                    }
                  }
                >
                  160
                </span>
                <span
                  className="rc-slider-mark-text rc-slider-mark-text-active"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "left": "75%",
                      "msTransform": "translateX(-50%)",
                      "transform": "translateX(-50%)",
                    }
                  }
                >
                  240
                </span>
                <span
                  className="rc-slider-mark-text rc-slider-mark-text-active"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "left": "100%",
                      "msTransform": "translateX(-50%)",
                      "transform": "translateX(-50%)",
                    }
                  }
                >
                  320
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-jgHCyG iuOiLs"
    >
      <div
        className="sc-gTgzIj lkXiws"
        onClick={[Function]}
      >
        <div
          className="sc-hTZhsR dOSvjF"
        >
          Standortsuche
        </div>
        <span
          className="sc-iNqMTl bvuvgJ"
          onClick={[Function]}
        >
          –
        </span>
      </div>
      <div
        className="sc-laRPJI eKTkhN"
      >
        <div
          className="sc-higXBA PJHoA"
        >
          <input
            className="sc-ehSCib eaStxD"
            onChange={[Function]}
            placeholder="Adresse"
            type="text"
            value=""
          />
          <ul
            className="sc-lcujXC cHAkoW"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar Tree 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Bauminformation
    </h2>
    <div
      className="sc-dacFzL eWgBi"
    >
      <div
        className="sc-kIeTtH beHmkX"
      >
        <img
          className="sc-hOqqkJ kvOCrw"
          src="/images/icon-trees.svg"
        />
        <div
          className="sc-dtwoBo fyICIg"
        >
          Lade Bauminformation...
        </div>
        
      </div>
    </div>
    <p
      className="sc-gsTCUz iiIrBj sc-bTvRPi kYdhOk"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/impressum/\\">Impressum</a> und <a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/datenschutz/\\">Datenschutz</a>",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Sidebar Tree Loading 1`] = `
<div
  className="sc-eFubAy gGZCPy"
>
  <a
    className="sc-jXktwP igeGQR"
    href="/"
    onClick={[Function]}
  >
    <button
      aria-label="Leiste schließen"
      className="sc-kLgntA bnqHqg"
      onClick={[Function]}
      title="Leiste schließen"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </a>
  <div
    className="sc-fmlJLJ eGvxtw"
  >
    <h2
      className="sc-dOSReg LQxMu"
    >
      Bauminformation
    </h2>
    <div
      className="sc-dacFzL eWgBi"
    >
      <div
        className="sc-kIeTtH beHmkX"
      >
        <img
          className="sc-hOqqkJ kvOCrw"
          src="/images/icon-trees.svg"
        />
        <div
          className="sc-dtwoBo fyICIg"
        >
          Lade Bauminformation...
        </div>
        
      </div>
    </div>
    <p
      className="sc-gsTCUz iiIrBj sc-bTvRPi kYdhOk"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/impressum/\\">Impressum</a> und <a target=\\"blank\\" href=\\"https://www.technologiestiftung-berlin.de/de/datenschutz/\\">Datenschutz</a>",
        }
      }
      onClick={[Function]}
    />
  </div>
</div>
`;
